--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-end-validation",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "dependencies": {
@@ -13,5 +13,9 @@
   },
   "scripts": {
     "build": "rollup -c"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/adrijan9/front-end-validation/issues"
+  },
+  "homepage": "https://github.com/adrijan9/front-end-validation/blob/main/README.md"
 }
