--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "lib",
     "target": "es5",
     "module": "esnext",
-    "lib": ["es2015"],
+    "lib": ["es2015", "dom"],
     "sourceMap": true,
     "strict": true,
     "strictFunctionTypes": true,
